# obs-shutdown-plugin

./: CMakeLists.txt  README.md
.github/workflows/: clang-format.yml  main.yml
ci/: forum-update-info.json
ci/macos/: install-packagesbuild.sh
example/: shutdown.py
lib/: obs-websocket-api.h
packaging/debian/: changelog  control
src/: plugin-macros.h.in  shutdown-plugin.cpp
